manifests/applications/b4mad-matrix/hookshot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-hookshot
spec:
  ports:
    - name: appservice
      port: 9993
      targetPort: appservice
      protocol: TCP
    - name: webhooks
      port: 9000
      targetPort: webhooks
      protocol: TCP
    - name: provisioning
      port: 9001
      targetPort: provisioning
      protocol: TCP
    - name: metrics
      port: 9002
      targetPort: metrics
      protocol: TCP
